Keyword-Density-And-Wordcount-Tool.html

--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -7,7 +7,7 @@
 
 <link rel="canonical" href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html">
 
-    <title>Keyword Density with percentagae chart and wordcount</title>
+<title>Keyword Density with Percentage Chart and Word Count</title>
     <style>
         * {
             margin: 0;
@@ -18,7 +18,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
-            padding: 20px;
+            padding: 0px;
         }
 
         .header {
@@ -440,6 +440,7 @@
 
     <h3 style="text-align: center; margin-top: 20px;">Word count and keywords density with Percentage Chart</h3> <br>
 <p style="text-align: center; max-width: 600px; margin: 0 auto;">A Word Count & Keyword Density Calculator helps analyze the number of words in a text and the percentage of keyword occurrences, essential for SEO optimization.</p>
+<p style="text-align: center; max-width: 600px; margin: 0 auto;">This tool ensures your content maintains an ideal keyword density for better search engine ranking while avoiding keyword stuffing.</p>
 
 <div style="background: #f9f9f9; padding: 15px; border-radius: 10px; max-width: 600px; margin: 20px auto; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); text-align: center;">
     <p><strong>1.</strong> Enter or paste your text into the input box upto 5000 words due to speed of the webpage</p>
@@ -449,8 +450,9 @@
     <p><strong>5.</strong> Get the keyword density, which shows how often the keyword appears in relation to the total words.</p>
 </div>
 
-<p style="text-align: center; max-width: 600px; margin: 0 auto;">This tool ensures your content maintains an ideal keyword density for better search engine ranking while avoiding keyword stuffing.</p>
 <br>
+        <h3> Frequently Asked Questions </h3>
+
      <div class="faq">
     <h3>1. What is Keyword Density?</h3>
     <p>Keyword density refers to the percentage of times a keyword appears on a web page in relation to the total number of words on that page. It is an important factor for SEO as it helps search engines understand the relevance of the page to specific search queries.</p>
@@ -462,6 +464,7 @@
 </div>
 
 <div class="faq">
+    <br>
     <h3>3. Why is Keyword Density Important for SEO?</h3>
     <p>Keyword density helps search engines determine the focus of your content. By using keywords strategically without overusing them, you can improve your page’s visibility for relevant search terms while maintaining a natural flow of content for your readers.</p>
 </div>
