--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -14,44 +14,75 @@
             padding: 0;
             box-sizing: border-box;
         }
-        /* Header */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background-color: #007BFF;
-            color: white;
-        }
-
-        .header .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .header nav {
-            display: flex;
-            gap: 15px;
-        }
-
-        .header nav a {
-            color: white;
-            text-decoration: none;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .header nav a:hover {
-            background-color: #0056b3;
-        }
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            padding: 20px;
             line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f9;
         }
 
+     /* Header */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    background-color: #007BFF;
+    color: white;
+}
+
+.header .logo {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.header nav {
+    display: flex;
+    gap: 15px;
+}
+
+.header nav a {
+    color: white;
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.header nav a:hover {
+    background-color: #0056b3;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .header nav {
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+    }
+
+    .header nav a {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .header .logo {
+        font-size: 20px;
+    }
+
+    .header nav a {
+        font-size: 14px;
+        padding: 10px 5px;
+    }
+}
         h1 {
             text-align: center;
             margin-bottom: 20px;
@@ -442,7 +473,7 @@
     <p><strong>5.</strong> Get your optimized slug, ready to be used in your URL.</p>
 </div>
 <p style="text-align: center; max-width: 600px; margin: 0 auto;">This tool ensures you have a great, SEO-friendly slug to enhance your website’s visibility and improve user experience.</p>
-<br>
+
           <section id="faq">
     <div class="container">
         <h2>Frequently Asked Questions (Slug Generator)</h2>
