--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta name="msvalidate.01" content="AED7909D22C1B87AB8128B09FC15CA18" />
   
  <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
@@ -659,3 +660,4 @@ document.addEventListener('click', (e) => {
 </body>
 
 </html>
+
