--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extract Bulk or single keywords from Bulk or single URLs in one click instantly.">
+     <title> Extract Keywords From Url </title>
+
+    <meta name="description" content="Get Keywords From Url instantly no log-in required you may be extract bulk urls and keywords from this website.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <meta name="msvalidate.01" content="AED7909D22C1B87AB8128B09FC15CA18" />
   
  <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,7 +19,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <title> Extract Keywords From URLs </title>
 
     <style>
         /* General Reset */
@@ -404,16 +404,6 @@ p {
       <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Extract Keywords from URLs",
-  "description": "Extract Bulk or single keywords from Bulk or single URLs in one click instantly.",
-  "url": "https://keywordsfromurls.com/",
-  "mainEntityOfPage": "https://keywordsfromurls.com/"
-}
-</script>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script>
@@ -660,4 +650,5 @@ document.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
